# FRAME

./: .buildinfo  .readthedocs.yaml  MANIFEST.in  frame.html  frame.migrations.html  frame.templatetags.html  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  usage.html
.doctrees/: environment.pickle  frame.doctree  frame.migrations.doctree  frame.templatetags.doctree  index.doctree  installation.doctree  modules.doctree  usage.doctree
.github/workflows/: documentation.yml
_modules/: index.html
_modules/frame/: admin.html  apps.html  aws_utils.html  base_forms.html  base_views.html  context_processors.html  forms.html  listener.html  models.html  utils.html
_sources/: frame.migrations.rst.txt  installation.rst.txt  usage.rst.txt
docs/: generate_docs.py  requirements.txt  settings.py
docs/source/: advanced-topics.md  apendix.md  changelog.md  conf.py  deployment.md  example.rst  frame.migrations.rst  frame.rst  frame.templatetags.rst  generate-project-block.rst  gettingstarted.rst  helloworld.md  index.rst  introduction.md  modules.rst  project-generation-settings.rst  project-structure.md  pystaruml.md  reference.md  reference.rst  usage.rst
frame/: admin.py  aws_utils.py  base_views.py  context_processors.py  listener.py  mixins.py  models.py  urls.py  utils.py
frame/migrations/: 0001_initial.py  0002_fieldconfiguration_detail_report_and_more.py  (+1 more)
frame/templates/: base.html  (+5 more)
meteor/: admin.py  apps.py  listener.py  models.py  urls.py  utils.py
(+33 files in other folders)
