[metadata]
name = frame
version = attr: frame.__version__
description = Framework for Rapid Application Modeling and Efficiency
author = Agwebberley
python_requires = >=3.10

[options]
packages = find:
include_package_data = True
install_requires =
    Django>=5.0
    boto3>=1.34.144
    weasyprint>=62.3

[options.packages.find]
exclude =
    tests
    tests.*
